# terraform-drift-detector

./: .gitignore  README.md  pyproject.toml
configs/: example-drift.yaml
docs/: EXTENDING.md
src/drift_detector/: __init__.py  cli.py  config.py
src/drift_detector/alerts/: webhook.py
src/drift_detector/api/: app.py
src/drift_detector/cloud/: __init__.py  aws.py  azure.py  base.py  factory.py  gcp.py
src/drift_detector/drift/: __init__.py  engine.py
src/drift_detector/extract/: __init__.py  registry.py  state.py
src/drift_detector/extract/mappers/: aws.py  azure.py  gcp.py
src/drift_detector/model/: __init__.py  diff.py  resources.py
src/drift_detector/observability/: metrics.py
src/drift_detector/report/: __init__.py  formatters.py
src/drift_detector/scan/: __init__.py  runner.py  service.py
src/drift_detector/scheduler/: service.py
src/drift_detector/state/: __init__.py  backends.py  reader.py
src/drift_detector/storage/: __init__.py  repository.py
src/drift_detector/web/static/: index.html
tests/: test_api.py  test_comparison.py  test_drift.py  test_metrics.py  test_state_backends.py  test_state_extract.py  test_storage.py
tests/fixtures/: sample.tfstate
