[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "terraform-drift-detector"
version = "1.0.0"
description = "Compare Terraform state against live cloud APIs to detect configuration drift"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "boto3>=1.34.0",
    "pyyaml>=6.0",
    "typer>=0.12.0",
    "rich>=13.7.0",
    "httpx>=0.27.0",
    "fastapi>=0.110.0",
    "uvicorn>=0.27.0",
    "apscheduler>=3.10.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "httpx>=0.27.0",
]
azure = [
    "azure-identity>=1.15.0",
]
gcp = [
    "google-cloud-storage>=2.14.0",
]
server = [
    "fastapi>=0.110.0",
    "uvicorn>=0.27.0",
    "apscheduler>=3.10.0",
]

[project.scripts]
drift = "drift_detector.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
drift_detector = ["web/static/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
